<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_light"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/app_logo"
        android:layout_marginStart="5dp"
        android:layout_width="112dp"
        android:layout_height="49dp"
        app:srcCompat="@drawable/pocketapothecary_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_logo"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app_logo"
        android:id="@+id/header_container">

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="187dp"
            android:layout_height="77dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="128dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome_to"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="30dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform"
            tools:text="Welcome to" />

        <TextView
            android:id="@+id/pocket_apothecary_signup"
            android:layout_width="183dp"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="128dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_medium_italic"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="30dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/login_signup_text"
            app:layout_constraintEnd_toStartOf="@+id/pill_logo_signup"
            app:layout_constraintStart_toEndOf="@+id/welcome_to"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:text="Pocket Apothecary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/header_container"
        android:id="@+id/login_form_layout">
        <TextView
            android:id="@+id/login_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginBottom="25dp"
            android:text="@string/signup_login_text"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />
        <EditText
            android:id="@+id/email_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:ems="14"
            android:padding="8dp"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/password_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:ems="14"
            android:padding="8dp"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins"
            android:autofillHints="password"
            android:hint="@string/password"
            android:layout_marginBottom="20dp"
            android:inputType="numberPassword" />
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/poppins"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_below="@id/login_form_layout"/>



</RelativeLayout>